--- a/travelblogfrontend/styles/globals.css
+++ b/travelblogfrontend/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Trebichet MS', Arial, sans-serif;
+  color: rgb(70,70,70);
+
 }
 
 a {
@@ -11,6 +12,24 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+/* App */
+.app-container {
+  background-color: rgb(145, 145, 145);
+}
+
+nav.nav-container {
+  background-color: rgb(255, 255, 255);
+  min-height: 100vh;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+nav.nav-container .nav-item-container {
+  padding: 30px;
+}
+
+.posts-container {
+
 }
