--- a/travelblogfrontend/styles/globals.css
+++ b/travelblogfrontend/styles/globals.css
@@ -46,7 +46,7 @@ nav.nav-container .nav-item-container {
 
 /*Card*/
 .card-container {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: 400px;
   padding: 10px;
   border-radius: 10px;
@@ -91,3 +91,25 @@ nav.nav-container .nav-item-container {
   border-radius: 25px;
 }
 
+/*Post*/
+.post-container {
+  background-color: rgb(255, 255, 255);
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: rgba(0,0,0,0.05) 0 6px 24px 0, rgba(0,0,0,0.08) 0 0 0 1px;
+  padding: 20px;
+  width: 100%;
+}
+
+.post-container .author-container,
+.post-container .map-container
+{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.map-container .map {
+  width: 100%;
+  height: 200px;
+}
